objects/Integration_Setting__mdt/Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>