objects/Integration_Setting__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>