objects/Integration_Setting__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>