objects/Integration_Setting__mdt/fields/Coupa_Asset_Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Asset_Lookup_Id__c</fullName>
    <label>Coupa Asset Lookup Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>