objects/Integration_Setting__mdt/fields/Coupa_Sales_Order_Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Sales_Order_Lookup_Id__c</fullName>
    <label>Coupa Sales Order Lookup Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>