objects/Integration_Setting__mdt/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>